--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,29 +1,68 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Podés cambiar el color!!!
+      A JUGAR!!
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" color="{{mi_color}}">
-  <ion-card >
-    <ion-card-header>Cambiar el color de fondo</ion-card-header>
-    <ion-card-content> 
-      <ion-label>Seleccionar Color:</ion-label>
-      <ion-select #color>
-        <ion-select-option value="primary">Primary</ion-select-option>
-        <ion-select-option value="secondary">Secondary</ion-select-option>
-        <ion-select-option value="tertiary">Tertiary</ion-select-option>
-        <ion-select-option value="success">Success</ion-select-option>
-        <ion-select-option value="warning">Warning</ion-select-option>
-        <ion-select-option value="danger">Danger</ion-select-option>
-        <ion-select-option value="light">Light</ion-select-option>
-        <ion-select-option value="medium">Medium</ion-select-option>
-        <ion-select-option value="dark">Dark</ion-select-option>
-      </ion-select>
-      <ion-button color="tertiary" ion-button block (click)="CambiarColor(color.value)">Cambiar Color</ion-button>
-    </ion-card-content>
-  </ion-card>
-</ion-content>
 
+<ion-content [fullscreen]="true">
+
+    <!-- Pantalla de selección de dificultad -->
+    
+    
+    <div *ngIf="!juegoIniciado" class="seleccion-dificultad">
+      <ion-grid>
+        <ion-row>
+          <ion-col>        
+            <ion-card color="primary"  expand="block" (click)="empezarJuego('facil')">
+              <ion-label style="font-size: 45px;">
+                <ion-icon aria-hidden="true" name="paw-outline"></ion-icon>
+                Fácil
+              </ion-label>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col>   
+            <ion-card color="primary"  expand="block" (click)="empezarJuego('medio')">
+              <ion-label style="font-size: 45px;">
+                <ion-icon aria-hidden="true" name="hammer-outline"></ion-icon>
+                Medio
+              </ion-label>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col>
+            <ion-card color="primary"  expand="block" (click)="empezarJuego('dificil')">
+              <ion-label style="font-size: 45px;">
+                <ion-icon aria-hidden="true" name="nutrition-outline"></ion-icon>
+                Difícil
+              </ion-label>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+
+      </ion-grid>
+    </div>
+    <!-- Pantalla del juego -->
+    <div *ngIf="juegoIniciado">
+      <ion-grid>
+        <ion-row>
+          <ion-col *ngFor="let carta of cartas" size="6">
+            <ion-card (click)="seleccionarCarta(carta)">
+              <img *ngIf="carta.estado !== 'oculta'" [src]="carta.imagen">
+              <img *ngIf="carta.estado === 'oculta'" class="reverso" src="../../assets/reverso.png">
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+
+</ion-content>
+  
+  
