--- a/src/app/splash/splash.page.html
+++ b/src/app/splash/splash.page.html
@@ -1,5 +1,11 @@
 <div class="splash-container">
-  <p class="splash-text">De Castro Jonathan</p>
+  <div class="letras-container">
+    <p class="splash-text">PPS</p>
+    <p class="splash-text">2025</p>
+  </div>
   <img src="assets/icon-only.png" class="splash-logo" />
-  <p class="splash-text">PPS - 2025</p>
+  <div class="letras-container">
+    <p class="splash-text">De Castro</p>
+    <p class="splash-text">Jonathan</p>
+  </div>
 </div>
