--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -20,7 +20,7 @@
     <ion-button expand="block" *ngIf="!logueado" (click)="IniciarSesion()">Hola!
       <ion-icon name="happy-outline"></ion-icon>
     </ion-button>
-    <ion-button expand="block" *ngIf="!logueado" fill="clear" (click)="Registrarse()">Registrarse
+    <ion-button expand="block" *ngIf="!logueado" fill="clear" (click)="mostrarRegistro()">Registrarse
 
     </ion-button>
     <ion-button expand="block" *ngIf="logueado" (click)="CerrarSesion()">Adiós!
@@ -28,6 +28,41 @@
     </ion-button>
 
   </ion-card> 
+
+  <ion-card *ngIf="mostrarFormRegistro" style="border: 2px solid; border-color: #690092;" id="RegistroForm">
+    <ion-card-header>Registro Nuevo Usuario</ion-card-header>
+
+    <form [formGroup]="form">
+      <ion-item>
+        <ion-label>Email:</ion-label>
+        <ion-input type="email" formControlName="correo"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Contraseña:</ion-label>
+        <ion-input type="password" formControlName="clave"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Perfil:</ion-label>
+        <ion-select formControlName="perfil">
+          <ion-select-option value="admin">admin</ion-select-option>
+          <ion-select-option value="invitado">invitado</ion-select-option>
+          <ion-select-option value="usuario">usuario</ion-select-option>
+          <ion-select-option value="tester">tester</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label>Sexo:</ion-label>
+        <ion-select formControlName="sexo">
+          <ion-select-option value="masculino">Masculino</ion-select-option>
+          <ion-select-option value="femenino">Femenino</ion-select-option>
+          <ion-select-option value="otro">Otro</ion-select-option>
+        </ion-select>
+      </ion-item>
+  
+      <ion-button expand="block" (click)="Registrarse()" [disabled]="form.invalid">Confirmar Registro</ion-button>
+      <ion-button expand="block" fill="clear" color="medium" (click)="mostrarRegistro()">Cancelar</ion-button>
+    </form>
+  </ion-card>
 
   <ion-img class="logo-app" src="../../assets/icon-only.png"></ion-img>
   
