--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,9 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="paw-outline"></ion-icon>
-      <ion-label>Fácil</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="hammer-outline"></ion-icon>
-      <ion-label>Medio</ion-label>
-    </ion-tab-button>
-
     <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="nutrition-outline"></ion-icon>
-      <ion-label>Difícil</ion-label>
+      <ion-icon aria-hidden="true" name="images-outline"></ion-icon>
+      <ion-label>Juego</ion-label>
     </ion-tab-button>
   
     <ion-tab-button tab="tab4" href="/tabs/tab4">
