--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -51,6 +51,12 @@
     </div>
     <!-- Pantalla del juego -->
     <div *ngIf="juegoIniciado">
+      <ion-button *ngIf="juegoIniciado" (click)="reiniciarJuego()">
+        Volver a selección de dificultad
+      </ion-button>
+
+      <ion-text *ngIf="juegoIniciado">Tiempo: {{ tiempo }}s</ion-text>
+
       <ion-grid>
         <ion-row>
           <ion-col *ngFor="let carta of cartas" size="6">
@@ -62,6 +68,7 @@
         </ion-row>
       </ion-grid>
     </div>
+
 
 </ion-content>
   
