--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -10,7 +10,7 @@
   <ion-card id="NongModel">
     <ion-card-header>Ingresar al juego</ion-card-header>
     <ion-item>
-      <ion-label position="floating">Email</ion-label>
+      <ion-label position="floating">Correo</ion-label>
       <ion-input type="email" [(ngModel)]="usuario"></ion-input>
     </ion-item>
     <ion-item>
@@ -34,7 +34,7 @@
 
     <form [formGroup]="form">
       <ion-item>
-        <ion-label>Email:</ion-label>
+        <ion-label>Correo:</ion-label>
         <ion-input type="email" formControlName="correo"></ion-input>
       </ion-item>
       <ion-item>
