--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,12 @@
 <ion-tabs>
 
+  
   <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="tab1" href="/tabs/tab1">
+      <ion-icon aria-hidden="true" name="stopwatch-outline"></ion-icon>
+      <ion-label>Mejores Tiempos</ion-label>
+    </ion-tab-button>
+  
     <ion-tab-button tab="tab3" href="/tabs/tab3">
       <ion-icon aria-hidden="true" name="images-outline"></ion-icon>
       <ion-label>Juego</ion-label>
