added spinner sounds

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -15,3 +15,11 @@
   :root {
     --ion-font-family: "Potta One", system-ui;
     }
+
+    :root {
+      /**
+       * Setting the variables for DEMO purposes only.
+       * Values will be set automatically when building an iOS or Android app.
+       */
+      --ion-safe-area-top: 20px;
+    }
